// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Trigger > enables a single day on click 1`] = `
<DocumentFragment>
  <fieldset
    class="kfp-run-form-fields kfp-trigger"
  >
    <legend>
      Schedule timing
    </legend>
    <label
      class="kfp-native-field"
    >
      <span>
        Trigger type
        <span
          aria-hidden="true"
        >
           *
        </span>
      </span>
      <select
        aria-label="Trigger type"
        required=""
      >
        <option
          value="0"
        >
          Periodic
        </option>
        <option
          value="1"
        >
          Cron
        </option>
      </select>
    </label>
    <div
      class="kfp-text-field"
    >
      <label
        for="_r_3h_"
      >
        Maximum concurrent runs
        <span
          aria-hidden="true"
        >
           *
        </span>
      </label>
      <div
        class="kfp-text-field-control"
      >
        <input
          class="h-[34px] w-full min-w-0 rounded-control border border-muted-foreground bg-background px-3 font-kfp-sans text-[13px] pointer-coarse:text-[16px] text-foreground placeholder:text-muted-foreground focus:border-primary disabled:cursor-not-allowed disabled:opacity-50 aria-invalid:border-destructive"
          data-slot="input"
          id="_r_3h_"
          inputmode="numeric"
          required=""
          value="10"
        />
      </div>
    </div>
    <fieldset
      class="kfp-schedule-boundary"
    >
      <legend>
        Start
      </legend>
      <label
        class="kfp-form-check"
        id="base-ui-_r_3k_-label"
      >
        <span
          aria-checked="false"
          aria-labelledby="base-ui-_r_3k_-label"
          class="kfp-checkbox"
          data-unchecked=""
          id="base-ui-_r_3j_"
          role="checkbox"
          tabindex="0"
        />
        <input
          aria-hidden="true"
          id="base-ui-_r_3k_"
          style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
          tabindex="-1"
          type="checkbox"
        />
        Has start date
      </label>
      <div
        class="kfp-schedule-date-time"
        style="visibility: hidden;"
      >
        <div
          class="kfp-text-field"
        >
          <label
            for="_r_3n_"
          >
            Start date
          </label>
          <div
            class="kfp-text-field-control"
          >
            <input
              aria-invalid="false"
              class="h-[34px] w-full min-w-0 rounded-control border border-muted-foreground bg-background px-3 font-kfp-sans text-[13px] pointer-coarse:text-[16px] text-foreground placeholder:text-muted-foreground focus:border-primary disabled:cursor-not-allowed disabled:opacity-50 aria-invalid:border-destructive"
              data-slot="input"
              id="_r_3n_"
              type="date"
              value="2018-12-21"
            />
          </div>
        </div>
        <div
          class="kfp-text-field"
        >
          <label
            for="_r_3p_"
          >
            Start time
          </label>
          <div
            class="kfp-text-field-control"
          >
            <input
              aria-invalid="false"
              class="h-[34px] w-full min-w-0 rounded-control border border-muted-foreground bg-background px-3 font-kfp-sans text-[13px] pointer-coarse:text-[16px] text-foreground placeholder:text-muted-foreground focus:border-primary disabled:cursor-not-allowed disabled:opacity-50 aria-invalid:border-destructive"
              data-slot="input"
              id="_r_3p_"
              type="time"
              value="07:53"
            />
          </div>
        </div>
      </div>
      <div
        class="kfp-form-error"
        data-testid="startTimeMessage"
        id="_r_3m_"
        style="visibility: hidden;"
      />
    </fieldset>
    <fieldset
      class="kfp-schedule-boundary"
    >
      <legend>
        End
      </legend>
      <label
        class="kfp-form-check"
        id="base-ui-_r_3s_-label"
      >
        <span
          aria-checked="false"
          aria-labelledby="base-ui-_r_3s_-label"
          class="kfp-checkbox"
          data-unchecked=""
          id="base-ui-_r_3r_"
          role="checkbox"
          tabindex="0"
        />
        <input
          aria-hidden="true"
          id="base-ui-_r_3s_"
          style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
          tabindex="-1"
          type="checkbox"
        />
        Has end date
      </label>
      <div
        class="kfp-schedule-date-time"
        style="visibility: hidden;"
      >
        <div
          class="kfp-text-field"
        >
          <label
            for="_r_3v_"
          >
            End date
          </label>
          <div
            class="kfp-text-field-control"
          >
            <input
              aria-invalid="false"
              class="h-[34px] w-full min-w-0 rounded-control border border-muted-foreground bg-background px-3 font-kfp-sans text-[13px] pointer-coarse:text-[16px] text-foreground placeholder:text-muted-foreground focus:border-primary disabled:cursor-not-allowed disabled:opacity-50 aria-invalid:border-destructive"
              data-slot="input"
              id="_r_3v_"
              type="date"
              value="2018-12-28"
            />
          </div>
        </div>
        <div
          class="kfp-text-field"
        >
          <label
            for="_r_41_"
          >
            End time
          </label>
          <div
            class="kfp-text-field-control"
          >
            <input
              aria-invalid="false"
              class="h-[34px] w-full min-w-0 rounded-control border border-muted-foreground bg-background px-3 font-kfp-sans text-[13px] pointer-coarse:text-[16px] text-foreground placeholder:text-muted-foreground focus:border-primary disabled:cursor-not-allowed disabled:opacity-50 aria-invalid:border-destructive"
              data-slot="input"
              id="_r_41_"
              type="time"
              value="07:53"
            />
          </div>
        </div>
      </div>
      <div
        class="kfp-form-error"
        data-testid="endTimeMessage"
        id="_r_3u_"
        style="visibility: hidden;"
      />
    </fieldset>
    <div>
      <label
        class="kfp-form-check"
        id="base-ui-_r_44_-label"
      >
        <span
          aria-checked="true"
          aria-labelledby="base-ui-_r_44_-label"
          class="kfp-checkbox"
          data-checked=""
          id="base-ui-_r_43_"
          role="checkbox"
          tabindex="0"
        >
          <span
            class="kfp-checkbox-indicator"
            data-checked=""
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-check"
              fill="none"
              height="13"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="13"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 6 9 17l-5-5"
              />
            </svg>
          </span>
        </span>
        <input
          aria-hidden="true"
          checked=""
          id="base-ui-_r_44_"
          style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
          tabindex="-1"
          type="checkbox"
        />
        Catchup
      </label>
      <details
        class="kfp-form-help"
      >
        <summary>
          About catchup
        </summary>
        <p>
          Whether the recurring run should catch up if behind schedule. Defaults to true.
        </p>
        <p>
          For example, if the recurring run is paused for a while and re-enabled afterwards. If catchup=true, the scheduler will catch up on (backfill) each missed interval. Otherwise, it only schedules the latest interval if more than one interval is ready to be scheduled.
        </p>
        <p>
          Usually, if your pipeline handles backfill internally, you should turn catchup off to avoid duplicate backfill.
        </p>
      </details>
    </div>
    <fieldset
      class="kfp-schedule-boundary"
    >
      <legend>
        Run every
      </legend>
      <div
        class="kfp-schedule-interval"
      >
        <label
          class="kfp-native-field"
        >
          <span>
            Interval unit
          </span>
          <select
            aria-label="Interval unit"
            required=""
          >
            <option
              value="Minute"
            >
              Minute
            </option>
            <option
              value="Hour"
            >
              Hour
            </option>
            <option
              value="Day"
            >
              Day
            </option>
            <option
              value="Week"
            >
              Week
            </option>
            <option
              value="Month"
            >
              Month
            </option>
          </select>
        </label>
      </div>
    </fieldset>
    <fieldset
      class="kfp-schedule-boundary"
    >
      <legend>
        On
      </legend>
      <label
        class="kfp-form-check"
        id="base-ui-_r_4e_-label"
      >
        <span
          aria-checked="false"
          aria-labelledby="base-ui-_r_4e_-label"
          class="kfp-checkbox"
          data-unchecked=""
          id="base-ui-_r_4d_"
          role="checkbox"
          tabindex="0"
        />
        <input
          aria-hidden="true"
          checked=""
          id="base-ui-_r_4e_"
          style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
          tabindex="-1"
          type="checkbox"
        />
        All
      </label>
      <div
        class="kfp-schedule-weekdays"
      >
        <button
          aria-label="Sunday"
          aria-pressed="true"
          class="inline-flex shrink-0 items-center justify-center gap-2 whitespace-nowrap rounded-control border font-kfp-sans text-[13px] font-medium transition-colors disabled:cursor-not-allowed disabled:opacity-50 aria-busy:cursor-wait [&_svg]:size-[18px] [&_svg]:shrink-0 border-transparent bg-primary text-primary-foreground hover:brightness-95 size-[34px] p-0"
          data-slot="button"
          tabindex="0"
          type="button"
        >
          S
        </button>
        <button
          aria-label="Monday"
          aria-pressed="false"
          class="inline-flex shrink-0 items-center justify-center gap-2 whitespace-nowrap rounded-control border font-kfp-sans text-[13px] font-medium transition-colors disabled:cursor-not-allowed disabled:opacity-50 aria-busy:cursor-wait [&_svg]:size-[18px] [&_svg]:shrink-0 border-border-strong bg-card text-foreground hover:bg-muted size-[34px] p-0"
          data-slot="button"
          tabindex="0"
          type="button"
        >
          M
        </button>
        <button
          aria-label="Tuesday"
          aria-pressed="true"
          class="inline-flex shrink-0 items-center justify-center gap-2 whitespace-nowrap rounded-control border font-kfp-sans text-[13px] font-medium transition-colors disabled:cursor-not-allowed disabled:opacity-50 aria-busy:cursor-wait [&_svg]:size-[18px] [&_svg]:shrink-0 border-transparent bg-primary text-primary-foreground hover:brightness-95 size-[34px] p-0"
          data-slot="button"
          tabindex="0"
          type="button"
        >
          T
        </button>
        <button
          aria-label="Wednesday"
          aria-pressed="false"
          class="inline-flex shrink-0 items-center justify-center gap-2 whitespace-nowrap rounded-control border font-kfp-sans text-[13px] font-medium transition-colors disabled:cursor-not-allowed disabled:opacity-50 aria-busy:cursor-wait [&_svg]:size-[18px] [&_svg]:shrink-0 border-border-strong bg-card text-foreground hover:bg-muted size-[34px] p-0"
          data-slot="button"
          tabindex="0"
          type="button"
        >
          W
        </button>
        <button
          aria-label="Thursday"
          aria-pressed="true"
          class="inline-flex shrink-0 items-center justify-center gap-2 whitespace-nowrap rounded-control border font-kfp-sans text-[13px] font-medium transition-colors disabled:cursor-not-allowed disabled:opacity-50 aria-busy:cursor-wait [&_svg]:size-[18px] [&_svg]:shrink-0 border-transparent bg-primary text-primary-foreground hover:brightness-95 size-[34px] p-0"
          data-slot="button"
          tabindex="0"
          type="button"
        >
          T
        </button>
        <button
          aria-label="Friday"
          aria-pressed="true"
          class="inline-flex shrink-0 items-center justify-center gap-2 whitespace-nowrap rounded-control border font-kfp-sans text-[13px] font-medium transition-colors disabled:cursor-not-allowed disabled:opacity-50 aria-busy:cursor-wait [&_svg]:size-[18px] [&_svg]:shrink-0 border-transparent bg-primary text-primary-foreground hover:brightness-95 size-[34px] p-0"
          data-slot="button"
          tabindex="0"
          type="button"
        >
          F
        </button>
        <button
          aria-label="Saturday"
          aria-pressed="true"
          class="inline-flex shrink-0 items-center justify-center gap-2 whitespace-nowrap rounded-control border font-kfp-sans text-[13px] font-medium transition-colors disabled:cursor-not-allowed disabled:opacity-50 aria-busy:cursor-wait [&_svg]:size-[18px] [&_svg]:shrink-0 border-transparent bg-primary text-primary-foreground hover:brightness-95 size-[34px] p-0"
          data-slot="button"
          tabindex="0"
          type="button"
        >
          S
        </button>
      </div>
    </fieldset>
    <div>
      <label
        class="kfp-form-check"
        id="base-ui-_r_49_-label"
      >
        <span
          aria-checked="false"
          aria-labelledby="base-ui-_r_49_-label"
          class="kfp-checkbox"
          data-unchecked=""
          id="base-ui-_r_48_"
          role="checkbox"
          tabindex="0"
        />
        <input
          aria-hidden="true"
          id="base-ui-_r_49_"
          style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
          tabindex="-1"
          type="checkbox"
        />
        Allow editing cron expression.
      </label>
      <p
        class="kfp-form-help"
      >
        Cron expression format is specified
        <a
          class="kfp-external-link"
          href="https://pkg.go.dev/github.com/robfig/cron#hdr-CRON_Expression_Format"
          rel="noopener"
          target="_blank"
        >
           here
        </a>
        .
      </p>
      <div
        class="kfp-text-field"
      >
        <label
          for="_r_4b_"
        >
          cron expression
        </label>
        <div
          class="kfp-text-field-control"
        >
          <input
            class="h-[34px] w-full min-w-0 rounded-control border border-muted-foreground bg-background px-3 font-kfp-sans text-[13px] pointer-coarse:text-[16px] text-foreground placeholder:text-muted-foreground focus:border-primary disabled:cursor-not-allowed disabled:opacity-50 aria-invalid:border-destructive"
            data-disabled=""
            data-slot="input"
            disabled=""
            id="_r_4b_"
            value="0 0 0 ? * 0,2,4,5,6"
          />
        </div>
      </div>
      <p
        class="kfp-form-help"
      >
        Note: Start and end dates/times are handled outside of cron.
      </p>
    </div>
  </fieldset>
</DocumentFragment>
`;

exports[`Trigger > renders all week days enabled 1`] = `
<DocumentFragment>
  <fieldset
    class="kfp-run-form-fields kfp-trigger"
  >
    <legend>
      Schedule timing
    </legend>
    <label
      class="kfp-native-field"
    >
      <span>
        Trigger type
        <span
          aria-hidden="true"
        >
           *
        </span>
      </span>
      <select
        aria-label="Trigger type"
        required=""
      >
        <option
          value="0"
        >
          Periodic
        </option>
        <option
          value="1"
        >
          Cron
        </option>
      </select>
    </label>
    <div
      class="kfp-text-field"
    >
      <label
        for="_r_2i_"
      >
        Maximum concurrent runs
        <span
          aria-hidden="true"
        >
           *
        </span>
      </label>
      <div
        class="kfp-text-field-control"
      >
        <input
          class="h-[34px] w-full min-w-0 rounded-control border border-muted-foreground bg-background px-3 font-kfp-sans text-[13px] pointer-coarse:text-[16px] text-foreground placeholder:text-muted-foreground focus:border-primary disabled:cursor-not-allowed disabled:opacity-50 aria-invalid:border-destructive"
          data-slot="input"
          id="_r_2i_"
          inputmode="numeric"
          required=""
          value="10"
        />
      </div>
    </div>
    <fieldset
      class="kfp-schedule-boundary"
    >
      <legend>
        Start
      </legend>
      <label
        class="kfp-form-check"
        id="base-ui-_r_2l_-label"
      >
        <span
          aria-checked="false"
          aria-labelledby="base-ui-_r_2l_-label"
          class="kfp-checkbox"
          data-unchecked=""
          id="base-ui-_r_2k_"
          role="checkbox"
          tabindex="0"
        />
        <input
          aria-hidden="true"
          id="base-ui-_r_2l_"
          style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
          tabindex="-1"
          type="checkbox"
        />
        Has start date
      </label>
      <div
        class="kfp-schedule-date-time"
        style="visibility: hidden;"
      >
        <div
          class="kfp-text-field"
        >
          <label
            for="_r_2o_"
          >
            Start date
          </label>
          <div
            class="kfp-text-field-control"
          >
            <input
              aria-invalid="false"
              class="h-[34px] w-full min-w-0 rounded-control border border-muted-foreground bg-background px-3 font-kfp-sans text-[13px] pointer-coarse:text-[16px] text-foreground placeholder:text-muted-foreground focus:border-primary disabled:cursor-not-allowed disabled:opacity-50 aria-invalid:border-destructive"
              data-slot="input"
              id="_r_2o_"
              type="date"
              value="2018-12-21"
            />
          </div>
        </div>
        <div
          class="kfp-text-field"
        >
          <label
            for="_r_2q_"
          >
            Start time
          </label>
          <div
            class="kfp-text-field-control"
          >
            <input
              aria-invalid="false"
              class="h-[34px] w-full min-w-0 rounded-control border border-muted-foreground bg-background px-3 font-kfp-sans text-[13px] pointer-coarse:text-[16px] text-foreground placeholder:text-muted-foreground focus:border-primary disabled:cursor-not-allowed disabled:opacity-50 aria-invalid:border-destructive"
              data-slot="input"
              id="_r_2q_"
              type="time"
              value="07:53"
            />
          </div>
        </div>
      </div>
      <div
        class="kfp-form-error"
        data-testid="startTimeMessage"
        id="_r_2n_"
        style="visibility: hidden;"
      />
    </fieldset>
    <fieldset
      class="kfp-schedule-boundary"
    >
      <legend>
        End
      </legend>
      <label
        class="kfp-form-check"
        id="base-ui-_r_2t_-label"
      >
        <span
          aria-checked="false"
          aria-labelledby="base-ui-_r_2t_-label"
          class="kfp-checkbox"
          data-unchecked=""
          id="base-ui-_r_2s_"
          role="checkbox"
          tabindex="0"
        />
        <input
          aria-hidden="true"
          id="base-ui-_r_2t_"
          style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
          tabindex="-1"
          type="checkbox"
        />
        Has end date
      </label>
      <div
        class="kfp-schedule-date-time"
        style="visibility: hidden;"
      >
        <div
          class="kfp-text-field"
        >
          <label
            for="_r_30_"
          >
            End date
          </label>
          <div
            class="kfp-text-field-control"
          >
            <input
              aria-invalid="false"
              class="h-[34px] w-full min-w-0 rounded-control border border-muted-foreground bg-background px-3 font-kfp-sans text-[13px] pointer-coarse:text-[16px] text-foreground placeholder:text-muted-foreground focus:border-primary disabled:cursor-not-allowed disabled:opacity-50 aria-invalid:border-destructive"
              data-slot="input"
              id="_r_30_"
              type="date"
              value="2018-12-28"
            />
          </div>
        </div>
        <div
          class="kfp-text-field"
        >
          <label
            for="_r_32_"
          >
            End time
          </label>
          <div
            class="kfp-text-field-control"
          >
            <input
              aria-invalid="false"
              class="h-[34px] w-full min-w-0 rounded-control border border-muted-foreground bg-background px-3 font-kfp-sans text-[13px] pointer-coarse:text-[16px] text-foreground placeholder:text-muted-foreground focus:border-primary disabled:cursor-not-allowed disabled:opacity-50 aria-invalid:border-destructive"
              data-slot="input"
              id="_r_32_"
              type="time"
              value="07:53"
            />
          </div>
        </div>
      </div>
      <div
        class="kfp-form-error"
        data-testid="endTimeMessage"
        id="_r_2v_"
        style="visibility: hidden;"
      />
    </fieldset>
    <div>
      <label
        class="kfp-form-check"
        id="base-ui-_r_35_-label"
      >
        <span
          aria-checked="true"
          aria-labelledby="base-ui-_r_35_-label"
          class="kfp-checkbox"
          data-checked=""
          id="base-ui-_r_34_"
          role="checkbox"
          tabindex="0"
        >
          <span
            class="kfp-checkbox-indicator"
            data-checked=""
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-check"
              fill="none"
              height="13"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="13"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 6 9 17l-5-5"
              />
            </svg>
          </span>
        </span>
        <input
          aria-hidden="true"
          checked=""
          id="base-ui-_r_35_"
          style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
          tabindex="-1"
          type="checkbox"
        />
        Catchup
      </label>
      <details
        class="kfp-form-help"
      >
        <summary>
          About catchup
        </summary>
        <p>
          Whether the recurring run should catch up if behind schedule. Defaults to true.
        </p>
        <p>
          For example, if the recurring run is paused for a while and re-enabled afterwards. If catchup=true, the scheduler will catch up on (backfill) each missed interval. Otherwise, it only schedules the latest interval if more than one interval is ready to be scheduled.
        </p>
        <p>
          Usually, if your pipeline handles backfill internally, you should turn catchup off to avoid duplicate backfill.
        </p>
      </details>
    </div>
    <fieldset
      class="kfp-schedule-boundary"
    >
      <legend>
        Run every
      </legend>
      <div
        class="kfp-schedule-interval"
      >
        <label
          class="kfp-native-field"
        >
          <span>
            Interval unit
          </span>
          <select
            aria-label="Interval unit"
            required=""
          >
            <option
              value="Minute"
            >
              Minute
            </option>
            <option
              value="Hour"
            >
              Hour
            </option>
            <option
              value="Day"
            >
              Day
            </option>
            <option
              value="Week"
            >
              Week
            </option>
            <option
              value="Month"
            >
              Month
            </option>
          </select>
        </label>
      </div>
    </fieldset>
    <fieldset
      class="kfp-schedule-boundary"
    >
      <legend>
        On
      </legend>
      <label
        class="kfp-form-check"
        id="base-ui-_r_3f_-label"
      >
        <span
          aria-checked="false"
          aria-labelledby="base-ui-_r_3f_-label"
          class="kfp-checkbox"
          data-unchecked=""
          id="base-ui-_r_3e_"
          role="checkbox"
          tabindex="0"
        />
        <input
          aria-hidden="true"
          checked=""
          id="base-ui-_r_3f_"
          style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
          tabindex="-1"
          type="checkbox"
        />
        All
      </label>
      <div
        class="kfp-schedule-weekdays"
      >
        <button
          aria-label="Sunday"
          aria-pressed="false"
          class="inline-flex shrink-0 items-center justify-center gap-2 whitespace-nowrap rounded-control border font-kfp-sans text-[13px] font-medium transition-colors disabled:cursor-not-allowed disabled:opacity-50 aria-busy:cursor-wait [&_svg]:size-[18px] [&_svg]:shrink-0 border-border-strong bg-card text-foreground hover:bg-muted size-[34px] p-0"
          data-slot="button"
          tabindex="0"
          type="button"
        >
          S
        </button>
        <button
          aria-label="Monday"
          aria-pressed="false"
          class="inline-flex shrink-0 items-center justify-center gap-2 whitespace-nowrap rounded-control border font-kfp-sans text-[13px] font-medium transition-colors disabled:cursor-not-allowed disabled:opacity-50 aria-busy:cursor-wait [&_svg]:size-[18px] [&_svg]:shrink-0 border-border-strong bg-card text-foreground hover:bg-muted size-[34px] p-0"
          data-slot="button"
          tabindex="0"
          type="button"
        >
          M
        </button>
        <button
          aria-label="Tuesday"
          aria-pressed="false"
          class="inline-flex shrink-0 items-center justify-center gap-2 whitespace-nowrap rounded-control border font-kfp-sans text-[13px] font-medium transition-colors disabled:cursor-not-allowed disabled:opacity-50 aria-busy:cursor-wait [&_svg]:size-[18px] [&_svg]:shrink-0 border-border-strong bg-card text-foreground hover:bg-muted size-[34px] p-0"
          data-slot="button"
          tabindex="0"
          type="button"
        >
          T
        </button>
        <button
          aria-label="Wednesday"
          aria-pressed="false"
          class="inline-flex shrink-0 items-center justify-center gap-2 whitespace-nowrap rounded-control border font-kfp-sans text-[13px] font-medium transition-colors disabled:cursor-not-allowed disabled:opacity-50 aria-busy:cursor-wait [&_svg]:size-[18px] [&_svg]:shrink-0 border-border-strong bg-card text-foreground hover:bg-muted size-[34px] p-0"
          data-slot="button"
          tabindex="0"
          type="button"
        >
          W
        </button>
        <button
          aria-label="Thursday"
          aria-pressed="false"
          class="inline-flex shrink-0 items-center justify-center gap-2 whitespace-nowrap rounded-control border font-kfp-sans text-[13px] font-medium transition-colors disabled:cursor-not-allowed disabled:opacity-50 aria-busy:cursor-wait [&_svg]:size-[18px] [&_svg]:shrink-0 border-border-strong bg-card text-foreground hover:bg-muted size-[34px] p-0"
          data-slot="button"
          tabindex="0"
          type="button"
        >
          T
        </button>
        <button
          aria-label="Friday"
          aria-pressed="false"
          class="inline-flex shrink-0 items-center justify-center gap-2 whitespace-nowrap rounded-control border font-kfp-sans text-[13px] font-medium transition-colors disabled:cursor-not-allowed disabled:opacity-50 aria-busy:cursor-wait [&_svg]:size-[18px] [&_svg]:shrink-0 border-border-strong bg-card text-foreground hover:bg-muted size-[34px] p-0"
          data-slot="button"
          tabindex="0"
          type="button"
        >
          F
        </button>
        <button
          aria-label="Saturday"
          aria-pressed="false"
          class="inline-flex shrink-0 items-center justify-center gap-2 whitespace-nowrap rounded-control border font-kfp-sans text-[13px] font-medium transition-colors disabled:cursor-not-allowed disabled:opacity-50 aria-busy:cursor-wait [&_svg]:size-[18px] [&_svg]:shrink-0 border-border-strong bg-card text-foreground hover:bg-muted size-[34px] p-0"
          data-slot="button"
          tabindex="0"
          type="button"
        >
          S
        </button>
      </div>
    </fieldset>
    <div>
      <label
        class="kfp-form-check"
        id="base-ui-_r_3a_-label"
      >
        <span
          aria-checked="false"
          aria-labelledby="base-ui-_r_3a_-label"
          class="kfp-checkbox"
          data-unchecked=""
          id="base-ui-_r_39_"
          role="checkbox"
          tabindex="0"
        />
        <input
          aria-hidden="true"
          id="base-ui-_r_3a_"
          style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
          tabindex="-1"
          type="checkbox"
        />
        Allow editing cron expression.
      </label>
      <p
        class="kfp-form-help"
      >
        Cron expression format is specified
        <a
          class="kfp-external-link"
          href="https://pkg.go.dev/github.com/robfig/cron#hdr-CRON_Expression_Format"
          rel="noopener"
          target="_blank"
        >
           here
        </a>
        .
      </p>
      <div
        class="kfp-text-field"
      >
        <label
          for="_r_3c_"
        >
          cron expression
        </label>
        <div
          class="kfp-text-field-control"
        >
          <input
            class="h-[34px] w-full min-w-0 rounded-control border border-muted-foreground bg-background px-3 font-kfp-sans text-[13px] pointer-coarse:text-[16px] text-foreground placeholder:text-muted-foreground focus:border-primary disabled:cursor-not-allowed disabled:opacity-50 aria-invalid:border-destructive"
            data-disabled=""
            data-slot="input"
            disabled=""
            id="_r_3c_"
            value="0 0 0 ? *"
          />
        </div>
      </div>
      <p
        class="kfp-form-help"
      >
        Note: Start and end dates/times are handled outside of cron.
      </p>
    </div>
  </fieldset>
</DocumentFragment>
`;

exports[`Trigger > renders periodic schedule controls for initial render 1`] = `
<DocumentFragment>
  <fieldset
    class="kfp-run-form-fields kfp-trigger"
  >
    <legend>
      Schedule timing
    </legend>
    <label
      class="kfp-native-field"
    >
      <span>
        Trigger type
        <span
          aria-hidden="true"
        >
           *
        </span>
      </span>
      <select
        aria-label="Trigger type"
        required=""
      >
        <option
          value="0"
        >
          Periodic
        </option>
        <option
          value="1"
        >
          Cron
        </option>
      </select>
    </label>
    <div
      class="kfp-text-field"
    >
      <label
        for="_r_0_"
      >
        Maximum concurrent runs
        <span
          aria-hidden="true"
        >
           *
        </span>
      </label>
      <div
        class="kfp-text-field-control"
      >
        <input
          class="h-[34px] w-full min-w-0 rounded-control border border-muted-foreground bg-background px-3 font-kfp-sans text-[13px] pointer-coarse:text-[16px] text-foreground placeholder:text-muted-foreground focus:border-primary disabled:cursor-not-allowed disabled:opacity-50 aria-invalid:border-destructive"
          data-slot="input"
          id="_r_0_"
          inputmode="numeric"
          required=""
          value="10"
        />
      </div>
    </div>
    <fieldset
      class="kfp-schedule-boundary"
    >
      <legend>
        Start
      </legend>
      <label
        class="kfp-form-check"
        id="base-ui-_r_3_-label"
      >
        <span
          aria-checked="false"
          aria-labelledby="base-ui-_r_3_-label"
          class="kfp-checkbox"
          data-unchecked=""
          id="base-ui-_r_2_"
          role="checkbox"
          tabindex="0"
        />
        <input
          aria-hidden="true"
          id="base-ui-_r_3_"
          style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
          tabindex="-1"
          type="checkbox"
        />
        Has start date
      </label>
      <div
        class="kfp-schedule-date-time"
        style="visibility: hidden;"
      >
        <div
          class="kfp-text-field"
        >
          <label
            for="_r_6_"
          >
            Start date
          </label>
          <div
            class="kfp-text-field-control"
          >
            <input
              aria-invalid="false"
              class="h-[34px] w-full min-w-0 rounded-control border border-muted-foreground bg-background px-3 font-kfp-sans text-[13px] pointer-coarse:text-[16px] text-foreground placeholder:text-muted-foreground focus:border-primary disabled:cursor-not-allowed disabled:opacity-50 aria-invalid:border-destructive"
              data-slot="input"
              id="_r_6_"
              type="date"
              value="2018-12-21"
            />
          </div>
        </div>
        <div
          class="kfp-text-field"
        >
          <label
            for="_r_8_"
          >
            Start time
          </label>
          <div
            class="kfp-text-field-control"
          >
            <input
              aria-invalid="false"
              class="h-[34px] w-full min-w-0 rounded-control border border-muted-foreground bg-background px-3 font-kfp-sans text-[13px] pointer-coarse:text-[16px] text-foreground placeholder:text-muted-foreground focus:border-primary disabled:cursor-not-allowed disabled:opacity-50 aria-invalid:border-destructive"
              data-slot="input"
              id="_r_8_"
              type="time"
              value="07:53"
            />
          </div>
        </div>
      </div>
      <div
        class="kfp-form-error"
        data-testid="startTimeMessage"
        id="_r_5_"
        style="visibility: hidden;"
      />
    </fieldset>
    <fieldset
      class="kfp-schedule-boundary"
    >
      <legend>
        End
      </legend>
      <label
        class="kfp-form-check"
        id="base-ui-_r_b_-label"
      >
        <span
          aria-checked="false"
          aria-labelledby="base-ui-_r_b_-label"
          class="kfp-checkbox"
          data-unchecked=""
          id="base-ui-_r_a_"
          role="checkbox"
          tabindex="0"
        />
        <input
          aria-hidden="true"
          id="base-ui-_r_b_"
          style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
          tabindex="-1"
          type="checkbox"
        />
        Has end date
      </label>
      <div
        class="kfp-schedule-date-time"
        style="visibility: hidden;"
      >
        <div
          class="kfp-text-field"
        >
          <label
            for="_r_e_"
          >
            End date
          </label>
          <div
            class="kfp-text-field-control"
          >
            <input
              aria-invalid="false"
              class="h-[34px] w-full min-w-0 rounded-control border border-muted-foreground bg-background px-3 font-kfp-sans text-[13px] pointer-coarse:text-[16px] text-foreground placeholder:text-muted-foreground focus:border-primary disabled:cursor-not-allowed disabled:opacity-50 aria-invalid:border-destructive"
              data-slot="input"
              id="_r_e_"
              type="date"
              value="2018-12-28"
            />
          </div>
        </div>
        <div
          class="kfp-text-field"
        >
          <label
            for="_r_g_"
          >
            End time
          </label>
          <div
            class="kfp-text-field-control"
          >
            <input
              aria-invalid="false"
              class="h-[34px] w-full min-w-0 rounded-control border border-muted-foreground bg-background px-3 font-kfp-sans text-[13px] pointer-coarse:text-[16px] text-foreground placeholder:text-muted-foreground focus:border-primary disabled:cursor-not-allowed disabled:opacity-50 aria-invalid:border-destructive"
              data-slot="input"
              id="_r_g_"
              type="time"
              value="07:53"
            />
          </div>
        </div>
      </div>
      <div
        class="kfp-form-error"
        data-testid="endTimeMessage"
        id="_r_d_"
        style="visibility: hidden;"
      />
    </fieldset>
    <div>
      <label
        class="kfp-form-check"
        id="base-ui-_r_j_-label"
      >
        <span
          aria-checked="true"
          aria-labelledby="base-ui-_r_j_-label"
          class="kfp-checkbox"
          data-checked=""
          id="base-ui-_r_i_"
          role="checkbox"
          tabindex="0"
        >
          <span
            class="kfp-checkbox-indicator"
            data-checked=""
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-check"
              fill="none"
              height="13"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="13"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 6 9 17l-5-5"
              />
            </svg>
          </span>
        </span>
        <input
          aria-hidden="true"
          checked=""
          id="base-ui-_r_j_"
          style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
          tabindex="-1"
          type="checkbox"
        />
        Catchup
      </label>
      <details
        class="kfp-form-help"
      >
        <summary>
          About catchup
        </summary>
        <p>
          Whether the recurring run should catch up if behind schedule. Defaults to true.
        </p>
        <p>
          For example, if the recurring run is paused for a while and re-enabled afterwards. If catchup=true, the scheduler will catch up on (backfill) each missed interval. Otherwise, it only schedules the latest interval if more than one interval is ready to be scheduled.
        </p>
        <p>
          Usually, if your pipeline handles backfill internally, you should turn catchup off to avoid duplicate backfill.
        </p>
      </details>
    </div>
    <fieldset
      class="kfp-schedule-boundary"
    >
      <legend>
        Run every
      </legend>
      <div
        class="kfp-schedule-interval"
      >
        <div
          class="kfp-text-field"
        >
          <label
            for="_r_l_"
          >
            Interval
            <span
              aria-hidden="true"
            >
               *
            </span>
          </label>
          <div
            class="kfp-text-field-control"
          >
            <input
              class="h-[34px] w-full min-w-0 rounded-control border border-muted-foreground bg-background px-3 font-kfp-sans text-[13px] pointer-coarse:text-[16px] text-foreground placeholder:text-muted-foreground focus:border-primary disabled:cursor-not-allowed disabled:opacity-50 aria-invalid:border-destructive"
              data-slot="input"
              id="_r_l_"
              min="1"
              required=""
              type="number"
              value="1"
            />
          </div>
        </div>
        <label
          class="kfp-native-field"
        >
          <span>
            Interval unit
          </span>
          <select
            aria-label="Interval unit"
            required=""
          >
            <option
              value="Minute"
            >
              Minutes
            </option>
            <option
              value="Hour"
            >
              Hours
            </option>
            <option
              value="Day"
            >
              Days
            </option>
            <option
              value="Week"
            >
              Weeks
            </option>
            <option
              value="Month"
            >
              Months
            </option>
          </select>
        </label>
      </div>
    </fieldset>
  </fieldset>
</DocumentFragment>
`;

exports[`Trigger > renders periodic schedule controls if the trigger type is CRON 1`] = `
<DocumentFragment>
  <fieldset
    class="kfp-run-form-fields kfp-trigger"
  >
    <legend>
      Schedule timing
    </legend>
    <label
      class="kfp-native-field"
    >
      <span>
        Trigger type
        <span
          aria-hidden="true"
        >
           *
        </span>
      </span>
      <select
        aria-label="Trigger type"
        required=""
      >
        <option
          value="0"
        >
          Periodic
        </option>
        <option
          value="1"
        >
          Cron
        </option>
      </select>
    </label>
    <div
      class="kfp-text-field"
    >
      <label
        for="_r_n_"
      >
        Maximum concurrent runs
        <span
          aria-hidden="true"
        >
           *
        </span>
      </label>
      <div
        class="kfp-text-field-control"
      >
        <input
          class="h-[34px] w-full min-w-0 rounded-control border border-muted-foreground bg-background px-3 font-kfp-sans text-[13px] pointer-coarse:text-[16px] text-foreground placeholder:text-muted-foreground focus:border-primary disabled:cursor-not-allowed disabled:opacity-50 aria-invalid:border-destructive"
          data-slot="input"
          id="_r_n_"
          inputmode="numeric"
          required=""
          value="10"
        />
      </div>
    </div>
    <fieldset
      class="kfp-schedule-boundary"
    >
      <legend>
        Start
      </legend>
      <label
        class="kfp-form-check"
        id="base-ui-_r_q_-label"
      >
        <span
          aria-checked="false"
          aria-labelledby="base-ui-_r_q_-label"
          class="kfp-checkbox"
          data-unchecked=""
          id="base-ui-_r_p_"
          role="checkbox"
          tabindex="0"
        />
        <input
          aria-hidden="true"
          id="base-ui-_r_q_"
          style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
          tabindex="-1"
          type="checkbox"
        />
        Has start date
      </label>
      <div
        class="kfp-schedule-date-time"
        style="visibility: hidden;"
      >
        <div
          class="kfp-text-field"
        >
          <label
            for="_r_t_"
          >
            Start date
          </label>
          <div
            class="kfp-text-field-control"
          >
            <input
              aria-invalid="false"
              class="h-[34px] w-full min-w-0 rounded-control border border-muted-foreground bg-background px-3 font-kfp-sans text-[13px] pointer-coarse:text-[16px] text-foreground placeholder:text-muted-foreground focus:border-primary disabled:cursor-not-allowed disabled:opacity-50 aria-invalid:border-destructive"
              data-slot="input"
              id="_r_t_"
              type="date"
              value="2018-12-21"
            />
          </div>
        </div>
        <div
          class="kfp-text-field"
        >
          <label
            for="_r_v_"
          >
            Start time
          </label>
          <div
            class="kfp-text-field-control"
          >
            <input
              aria-invalid="false"
              class="h-[34px] w-full min-w-0 rounded-control border border-muted-foreground bg-background px-3 font-kfp-sans text-[13px] pointer-coarse:text-[16px] text-foreground placeholder:text-muted-foreground focus:border-primary disabled:cursor-not-allowed disabled:opacity-50 aria-invalid:border-destructive"
              data-slot="input"
              id="_r_v_"
              type="time"
              value="07:53"
            />
          </div>
        </div>
      </div>
      <div
        class="kfp-form-error"
        data-testid="startTimeMessage"
        id="_r_s_"
        style="visibility: hidden;"
      />
    </fieldset>
    <fieldset
      class="kfp-schedule-boundary"
    >
      <legend>
        End
      </legend>
      <label
        class="kfp-form-check"
        id="base-ui-_r_12_-label"
      >
        <span
          aria-checked="false"
          aria-labelledby="base-ui-_r_12_-label"
          class="kfp-checkbox"
          data-unchecked=""
          id="base-ui-_r_11_"
          role="checkbox"
          tabindex="0"
        />
        <input
          aria-hidden="true"
          id="base-ui-_r_12_"
          style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
          tabindex="-1"
          type="checkbox"
        />
        Has end date
      </label>
      <div
        class="kfp-schedule-date-time"
        style="visibility: hidden;"
      >
        <div
          class="kfp-text-field"
        >
          <label
            for="_r_15_"
          >
            End date
          </label>
          <div
            class="kfp-text-field-control"
          >
            <input
              aria-invalid="false"
              class="h-[34px] w-full min-w-0 rounded-control border border-muted-foreground bg-background px-3 font-kfp-sans text-[13px] pointer-coarse:text-[16px] text-foreground placeholder:text-muted-foreground focus:border-primary disabled:cursor-not-allowed disabled:opacity-50 aria-invalid:border-destructive"
              data-slot="input"
              id="_r_15_"
              type="date"
              value="2018-12-28"
            />
          </div>
        </div>
        <div
          class="kfp-text-field"
        >
          <label
            for="_r_17_"
          >
            End time
          </label>
          <div
            class="kfp-text-field-control"
          >
            <input
              aria-invalid="false"
              class="h-[34px] w-full min-w-0 rounded-control border border-muted-foreground bg-background px-3 font-kfp-sans text-[13px] pointer-coarse:text-[16px] text-foreground placeholder:text-muted-foreground focus:border-primary disabled:cursor-not-allowed disabled:opacity-50 aria-invalid:border-destructive"
              data-slot="input"
              id="_r_17_"
              type="time"
              value="07:53"
            />
          </div>
        </div>
      </div>
      <div
        class="kfp-form-error"
        data-testid="endTimeMessage"
        id="_r_14_"
        style="visibility: hidden;"
      />
    </fieldset>
    <div>
      <label
        class="kfp-form-check"
        id="base-ui-_r_1a_-label"
      >
        <span
          aria-checked="true"
          aria-labelledby="base-ui-_r_1a_-label"
          class="kfp-checkbox"
          data-checked=""
          id="base-ui-_r_19_"
          role="checkbox"
          tabindex="0"
        >
          <span
            class="kfp-checkbox-indicator"
            data-checked=""
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-check"
              fill="none"
              height="13"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="13"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 6 9 17l-5-5"
              />
            </svg>
          </span>
        </span>
        <input
          aria-hidden="true"
          checked=""
          id="base-ui-_r_1a_"
          style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
          tabindex="-1"
          type="checkbox"
        />
        Catchup
      </label>
      <details
        class="kfp-form-help"
      >
        <summary>
          About catchup
        </summary>
        <p>
          Whether the recurring run should catch up if behind schedule. Defaults to true.
        </p>
        <p>
          For example, if the recurring run is paused for a while and re-enabled afterwards. If catchup=true, the scheduler will catch up on (backfill) each missed interval. Otherwise, it only schedules the latest interval if more than one interval is ready to be scheduled.
        </p>
        <p>
          Usually, if your pipeline handles backfill internally, you should turn catchup off to avoid duplicate backfill.
        </p>
      </details>
    </div>
    <fieldset
      class="kfp-schedule-boundary"
    >
      <legend>
        Run every
      </legend>
      <div
        class="kfp-schedule-interval"
      >
        <label
          class="kfp-native-field"
        >
          <span>
            Interval unit
          </span>
          <select
            aria-label="Interval unit"
            required=""
          >
            <option
              value="Minute"
            >
              Minute
            </option>
            <option
              value="Hour"
            >
              Hour
            </option>
            <option
              value="Day"
            >
              Day
            </option>
            <option
              value="Week"
            >
              Week
            </option>
            <option
              value="Month"
            >
              Month
            </option>
          </select>
        </label>
      </div>
    </fieldset>
    <div>
      <label
        class="kfp-form-check"
        id="base-ui-_r_1f_-label"
      >
        <span
          aria-checked="false"
          aria-labelledby="base-ui-_r_1f_-label"
          class="kfp-checkbox"
          data-unchecked=""
          id="base-ui-_r_1e_"
          role="checkbox"
          tabindex="0"
        />
        <input
          aria-hidden="true"
          id="base-ui-_r_1f_"
          style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
          tabindex="-1"
          type="checkbox"
        />
        Allow editing cron expression.
      </label>
      <p
        class="kfp-form-help"
      >
        Cron expression format is specified
        <a
          class="kfp-external-link"
          href="https://pkg.go.dev/github.com/robfig/cron#hdr-CRON_Expression_Format"
          rel="noopener"
          target="_blank"
        >
           here
        </a>
        .
      </p>
      <div
        class="kfp-text-field"
      >
        <label
          for="_r_1h_"
        >
          cron expression
        </label>
        <div
          class="kfp-text-field-control"
        >
          <input
            class="h-[34px] w-full min-w-0 rounded-control border border-muted-foreground bg-background px-3 font-kfp-sans text-[13px] pointer-coarse:text-[16px] text-foreground placeholder:text-muted-foreground focus:border-primary disabled:cursor-not-allowed disabled:opacity-50 aria-invalid:border-destructive"
            data-disabled=""
            data-slot="input"
            disabled=""
            id="_r_1h_"
            value="0 0 * * * ?"
          />
        </div>
      </div>
      <p
        class="kfp-form-help"
      >
        Note: Start and end dates/times are handled outside of cron.
      </p>
    </div>
  </fieldset>
</DocumentFragment>
`;

exports[`Trigger > renders week days if the trigger type is CRON and interval is weekly 1`] = `
<DocumentFragment>
  <fieldset
    class="kfp-run-form-fields kfp-trigger"
  >
    <legend>
      Schedule timing
    </legend>
    <label
      class="kfp-native-field"
    >
      <span>
        Trigger type
        <span
          aria-hidden="true"
        >
           *
        </span>
      </span>
      <select
        aria-label="Trigger type"
        required=""
      >
        <option
          value="0"
        >
          Periodic
        </option>
        <option
          value="1"
        >
          Cron
        </option>
      </select>
    </label>
    <div
      class="kfp-text-field"
    >
      <label
        for="_r_1j_"
      >
        Maximum concurrent runs
        <span
          aria-hidden="true"
        >
           *
        </span>
      </label>
      <div
        class="kfp-text-field-control"
      >
        <input
          class="h-[34px] w-full min-w-0 rounded-control border border-muted-foreground bg-background px-3 font-kfp-sans text-[13px] pointer-coarse:text-[16px] text-foreground placeholder:text-muted-foreground focus:border-primary disabled:cursor-not-allowed disabled:opacity-50 aria-invalid:border-destructive"
          data-slot="input"
          id="_r_1j_"
          inputmode="numeric"
          required=""
          value="10"
        />
      </div>
    </div>
    <fieldset
      class="kfp-schedule-boundary"
    >
      <legend>
        Start
      </legend>
      <label
        class="kfp-form-check"
        id="base-ui-_r_1m_-label"
      >
        <span
          aria-checked="false"
          aria-labelledby="base-ui-_r_1m_-label"
          class="kfp-checkbox"
          data-unchecked=""
          id="base-ui-_r_1l_"
          role="checkbox"
          tabindex="0"
        />
        <input
          aria-hidden="true"
          id="base-ui-_r_1m_"
          style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
          tabindex="-1"
          type="checkbox"
        />
        Has start date
      </label>
      <div
        class="kfp-schedule-date-time"
        style="visibility: hidden;"
      >
        <div
          class="kfp-text-field"
        >
          <label
            for="_r_1p_"
          >
            Start date
          </label>
          <div
            class="kfp-text-field-control"
          >
            <input
              aria-invalid="false"
              class="h-[34px] w-full min-w-0 rounded-control border border-muted-foreground bg-background px-3 font-kfp-sans text-[13px] pointer-coarse:text-[16px] text-foreground placeholder:text-muted-foreground focus:border-primary disabled:cursor-not-allowed disabled:opacity-50 aria-invalid:border-destructive"
              data-slot="input"
              id="_r_1p_"
              type="date"
              value="2018-12-21"
            />
          </div>
        </div>
        <div
          class="kfp-text-field"
        >
          <label
            for="_r_1r_"
          >
            Start time
          </label>
          <div
            class="kfp-text-field-control"
          >
            <input
              aria-invalid="false"
              class="h-[34px] w-full min-w-0 rounded-control border border-muted-foreground bg-background px-3 font-kfp-sans text-[13px] pointer-coarse:text-[16px] text-foreground placeholder:text-muted-foreground focus:border-primary disabled:cursor-not-allowed disabled:opacity-50 aria-invalid:border-destructive"
              data-slot="input"
              id="_r_1r_"
              type="time"
              value="07:53"
            />
          </div>
        </div>
      </div>
      <div
        class="kfp-form-error"
        data-testid="startTimeMessage"
        id="_r_1o_"
        style="visibility: hidden;"
      />
    </fieldset>
    <fieldset
      class="kfp-schedule-boundary"
    >
      <legend>
        End
      </legend>
      <label
        class="kfp-form-check"
        id="base-ui-_r_1u_-label"
      >
        <span
          aria-checked="false"
          aria-labelledby="base-ui-_r_1u_-label"
          class="kfp-checkbox"
          data-unchecked=""
          id="base-ui-_r_1t_"
          role="checkbox"
          tabindex="0"
        />
        <input
          aria-hidden="true"
          id="base-ui-_r_1u_"
          style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
          tabindex="-1"
          type="checkbox"
        />
        Has end date
      </label>
      <div
        class="kfp-schedule-date-time"
        style="visibility: hidden;"
      >
        <div
          class="kfp-text-field"
        >
          <label
            for="_r_21_"
          >
            End date
          </label>
          <div
            class="kfp-text-field-control"
          >
            <input
              aria-invalid="false"
              class="h-[34px] w-full min-w-0 rounded-control border border-muted-foreground bg-background px-3 font-kfp-sans text-[13px] pointer-coarse:text-[16px] text-foreground placeholder:text-muted-foreground focus:border-primary disabled:cursor-not-allowed disabled:opacity-50 aria-invalid:border-destructive"
              data-slot="input"
              id="_r_21_"
              type="date"
              value="2018-12-28"
            />
          </div>
        </div>
        <div
          class="kfp-text-field"
        >
          <label
            for="_r_23_"
          >
            End time
          </label>
          <div
            class="kfp-text-field-control"
          >
            <input
              aria-invalid="false"
              class="h-[34px] w-full min-w-0 rounded-control border border-muted-foreground bg-background px-3 font-kfp-sans text-[13px] pointer-coarse:text-[16px] text-foreground placeholder:text-muted-foreground focus:border-primary disabled:cursor-not-allowed disabled:opacity-50 aria-invalid:border-destructive"
              data-slot="input"
              id="_r_23_"
              type="time"
              value="07:53"
            />
          </div>
        </div>
      </div>
      <div
        class="kfp-form-error"
        data-testid="endTimeMessage"
        id="_r_20_"
        style="visibility: hidden;"
      />
    </fieldset>
    <div>
      <label
        class="kfp-form-check"
        id="base-ui-_r_26_-label"
      >
        <span
          aria-checked="true"
          aria-labelledby="base-ui-_r_26_-label"
          class="kfp-checkbox"
          data-checked=""
          id="base-ui-_r_25_"
          role="checkbox"
          tabindex="0"
        >
          <span
            class="kfp-checkbox-indicator"
            data-checked=""
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-check"
              fill="none"
              height="13"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="13"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 6 9 17l-5-5"
              />
            </svg>
          </span>
        </span>
        <input
          aria-hidden="true"
          checked=""
          id="base-ui-_r_26_"
          style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
          tabindex="-1"
          type="checkbox"
        />
        Catchup
      </label>
      <details
        class="kfp-form-help"
      >
        <summary>
          About catchup
        </summary>
        <p>
          Whether the recurring run should catch up if behind schedule. Defaults to true.
        </p>
        <p>
          For example, if the recurring run is paused for a while and re-enabled afterwards. If catchup=true, the scheduler will catch up on (backfill) each missed interval. Otherwise, it only schedules the latest interval if more than one interval is ready to be scheduled.
        </p>
        <p>
          Usually, if your pipeline handles backfill internally, you should turn catchup off to avoid duplicate backfill.
        </p>
      </details>
    </div>
    <fieldset
      class="kfp-schedule-boundary"
    >
      <legend>
        Run every
      </legend>
      <div
        class="kfp-schedule-interval"
      >
        <label
          class="kfp-native-field"
        >
          <span>
            Interval unit
          </span>
          <select
            aria-label="Interval unit"
            required=""
          >
            <option
              value="Minute"
            >
              Minute
            </option>
            <option
              value="Hour"
            >
              Hour
            </option>
            <option
              value="Day"
            >
              Day
            </option>
            <option
              value="Week"
            >
              Week
            </option>
            <option
              value="Month"
            >
              Month
            </option>
          </select>
        </label>
      </div>
    </fieldset>
    <fieldset
      class="kfp-schedule-boundary"
    >
      <legend>
        On
      </legend>
      <label
        class="kfp-form-check"
        id="base-ui-_r_2g_-label"
      >
        <span
          aria-checked="true"
          aria-labelledby="base-ui-_r_2g_-label"
          class="kfp-checkbox"
          data-checked=""
          id="base-ui-_r_2f_"
          role="checkbox"
          tabindex="0"
        >
          <span
            class="kfp-checkbox-indicator"
            data-checked=""
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-check"
              fill="none"
              height="13"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="13"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 6 9 17l-5-5"
              />
            </svg>
          </span>
        </span>
        <input
          aria-hidden="true"
          checked=""
          id="base-ui-_r_2g_"
          style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
          tabindex="-1"
          type="checkbox"
        />
        All
      </label>
      <div
        class="kfp-schedule-weekdays"
      >
        <button
          aria-label="Sunday"
          aria-pressed="true"
          class="inline-flex shrink-0 items-center justify-center gap-2 whitespace-nowrap rounded-control border font-kfp-sans text-[13px] font-medium transition-colors disabled:cursor-not-allowed disabled:opacity-50 aria-busy:cursor-wait [&_svg]:size-[18px] [&_svg]:shrink-0 border-transparent bg-primary text-primary-foreground hover:brightness-95 size-[34px] p-0"
          data-slot="button"
          tabindex="0"
          type="button"
        >
          S
        </button>
        <button
          aria-label="Monday"
          aria-pressed="true"
          class="inline-flex shrink-0 items-center justify-center gap-2 whitespace-nowrap rounded-control border font-kfp-sans text-[13px] font-medium transition-colors disabled:cursor-not-allowed disabled:opacity-50 aria-busy:cursor-wait [&_svg]:size-[18px] [&_svg]:shrink-0 border-transparent bg-primary text-primary-foreground hover:brightness-95 size-[34px] p-0"
          data-slot="button"
          tabindex="0"
          type="button"
        >
          M
        </button>
        <button
          aria-label="Tuesday"
          aria-pressed="true"
          class="inline-flex shrink-0 items-center justify-center gap-2 whitespace-nowrap rounded-control border font-kfp-sans text-[13px] font-medium transition-colors disabled:cursor-not-allowed disabled:opacity-50 aria-busy:cursor-wait [&_svg]:size-[18px] [&_svg]:shrink-0 border-transparent bg-primary text-primary-foreground hover:brightness-95 size-[34px] p-0"
          data-slot="button"
          tabindex="0"
          type="button"
        >
          T
        </button>
        <button
          aria-label="Wednesday"
          aria-pressed="true"
          class="inline-flex shrink-0 items-center justify-center gap-2 whitespace-nowrap rounded-control border font-kfp-sans text-[13px] font-medium transition-colors disabled:cursor-not-allowed disabled:opacity-50 aria-busy:cursor-wait [&_svg]:size-[18px] [&_svg]:shrink-0 border-transparent bg-primary text-primary-foreground hover:brightness-95 size-[34px] p-0"
          data-slot="button"
          tabindex="0"
          type="button"
        >
          W
        </button>
        <button
          aria-label="Thursday"
          aria-pressed="true"
          class="inline-flex shrink-0 items-center justify-center gap-2 whitespace-nowrap rounded-control border font-kfp-sans text-[13px] font-medium transition-colors disabled:cursor-not-allowed disabled:opacity-50 aria-busy:cursor-wait [&_svg]:size-[18px] [&_svg]:shrink-0 border-transparent bg-primary text-primary-foreground hover:brightness-95 size-[34px] p-0"
          data-slot="button"
          tabindex="0"
          type="button"
        >
          T
        </button>
        <button
          aria-label="Friday"
          aria-pressed="true"
          class="inline-flex shrink-0 items-center justify-center gap-2 whitespace-nowrap rounded-control border font-kfp-sans text-[13px] font-medium transition-colors disabled:cursor-not-allowed disabled:opacity-50 aria-busy:cursor-wait [&_svg]:size-[18px] [&_svg]:shrink-0 border-transparent bg-primary text-primary-foreground hover:brightness-95 size-[34px] p-0"
          data-slot="button"
          tabindex="0"
          type="button"
        >
          F
        </button>
        <button
          aria-label="Saturday"
          aria-pressed="true"
          class="inline-flex shrink-0 items-center justify-center gap-2 whitespace-nowrap rounded-control border font-kfp-sans text-[13px] font-medium transition-colors disabled:cursor-not-allowed disabled:opacity-50 aria-busy:cursor-wait [&_svg]:size-[18px] [&_svg]:shrink-0 border-transparent bg-primary text-primary-foreground hover:brightness-95 size-[34px] p-0"
          data-slot="button"
          tabindex="0"
          type="button"
        >
          S
        </button>
      </div>
    </fieldset>
    <div>
      <label
        class="kfp-form-check"
        id="base-ui-_r_2b_-label"
      >
        <span
          aria-checked="false"
          aria-labelledby="base-ui-_r_2b_-label"
          class="kfp-checkbox"
          data-unchecked=""
          id="base-ui-_r_2a_"
          role="checkbox"
          tabindex="0"
        />
        <input
          aria-hidden="true"
          id="base-ui-_r_2b_"
          style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
          tabindex="-1"
          type="checkbox"
        />
        Allow editing cron expression.
      </label>
      <p
        class="kfp-form-help"
      >
        Cron expression format is specified
        <a
          class="kfp-external-link"
          href="https://pkg.go.dev/github.com/robfig/cron#hdr-CRON_Expression_Format"
          rel="noopener"
          target="_blank"
        >
           here
        </a>
        .
      </p>
      <div
        class="kfp-text-field"
      >
        <label
          for="_r_2d_"
        >
          cron expression
        </label>
        <div
          class="kfp-text-field-control"
        >
          <input
            class="h-[34px] w-full min-w-0 rounded-control border border-muted-foreground bg-background px-3 font-kfp-sans text-[13px] pointer-coarse:text-[16px] text-foreground placeholder:text-muted-foreground focus:border-primary disabled:cursor-not-allowed disabled:opacity-50 aria-invalid:border-destructive"
            data-disabled=""
            data-slot="input"
            disabled=""
            id="_r_2d_"
            value="0 0 0 ? * *"
          />
        </div>
      </div>
      <p
        class="kfp-form-help"
      >
        Note: Start and end dates/times are handled outside of cron.
      </p>
    </div>
  </fieldset>
</DocumentFragment>
`;
